<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Calculator</string>
    <string name="sin">SIN</string>
    <string name="cos">COS</string>
    <string name="tan">TAN</string>
    <string name="percent">%</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="power">x^2</string>
    <string name="backspace">CE</string>
    <string name="clearall">AC</string>
    <string name="factorial">x!</string>
    <string name="log">LOG</string>
    <string name="naturallog">LN</string>
    <string name="answer">ANS</string>
    <string name="pi">π</string>
    <string name="sqrt">√</string>
    <string name="period">.</string>

</resources>
